tests/004.out
Setting dest port but protocol is not udp nor tcp
Error: Failed setting rule
-A INPUT --dport 80 -j ACCEPT
                 ^^^
Failed parsing input
